// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots applications/ApplicationItem Application 1`] = `
<div
  id="root"
>
  <li
    class="MuiListItem-root MuiListItem-padding MuiListItem-divider makeStyles-divider makeStyles-root css-1oz7m58-MuiListItem-root"
    data-testid="list-item"
  >
    <div
      class="MuiGrid-root MuiGrid-container css-11lq3yg-MuiGrid-root"
    >
      <div
        class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 css-1idn90j-MuiGrid-root"
      >
        <div
          class="MuiGrid-root MuiGrid-container makeStyles-gridHeader css-1xzqqmo-MuiGrid-root"
        >
          <div
            class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-spacing-xs-1 css-j1w48a-MuiGrid-root"
          >
            <div
              class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 css-1idn90j-MuiGrid-root"
            >
              <h2
                class="MuiTypography-root MuiTypography-h2 css-150084s-MuiTypography-root"
              >
                <a
                  class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineHover makeStyles-mainLink css-1emptwe-MuiTypography-root-MuiLink-root"
                  href="/apps/123"
                >
                  ABC
                </a>
              </h2>
            </div>
            <div
              class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 css-1idn90j-MuiGrid-root"
            >
              <div
                class="MuiBox-root css-1yq8yj7"
              >
                <p
                  arial-label="group-id"
                  class="MuiTypography-root MuiTypography-body1 MuiTypography-noWrap makeStyles-idLabel css-14wn2h6-MuiTypography-root"
                >
                  xxx-xxx-yyy
                </p>
              </div>
              <div
                class="MuiBox-root css-1yuhvjn"
              >
                <span
                  class="MuiTypography-root MuiTypography-body1 makeStyles-descriptionLabel css-1ezega9-MuiTypography-root"
                >
                  App Item Description
                </span>
              </div>
            </div>
          </div>
          <div
            class="MuiGrid-root MuiGrid-item css-13i4rnv-MuiGrid-root"
          >
            <div>
              <button
                aria-controls="simple-menu-1"
                aria-haspopup="true"
                aria-label="Open menu"
                class="MuiButtonBase-root MuiIconButton-root MuiIconButton-edgeEnd MuiIconButton-sizeLarge css-1pux6rn-MuiButtonBase-root-MuiIconButton-root"
                data-testid="more-menu-open-button"
                tabindex="0"
                type="button"
              >
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
                  data-testid="MoreVertIcon"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M12 8c1.1 0 2-.9 2-2s-.9-2-2-2-2 .9-2 2 .9 2 2 2m0 2c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2m0 6c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2"
                  />
                </svg>
                <span
                  class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
                />
              </button>
            </div>
          </div>
        </div>
        <hr
          class="MuiDivider-root MuiDivider-fullWidth MuiDivider-light makeStyles-innerDivider css-xetjfm-MuiDivider-root"
        />
      </div>
      <div
        class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 css-1idn90j-MuiGrid-root"
      >
        <div
          class="MuiGrid-root MuiGrid-container makeStyles-itemSection css-11lq3yg-MuiGrid-root"
        >
          <div
            class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-4 css-gj1fbr-MuiGrid-root"
          >
            <div
              class="MuiBox-root css-1yuhvjn"
            >
              <span
                class="MuiTypography-root MuiTypography-body1 makeStyles-featureLabel css-1ezega9-MuiTypography-root"
              >
                INSTANCES
              </span>
              <span
                class="MuiTypography-root MuiTypography-body1 makeStyles-label makeStyles-label css-1ezega9-MuiTypography-root"
              >
                <h5
                  class="MuiTypography-root MuiTypography-h5 css-xqgeko-MuiTypography-root"
                >
                  1
                </h5>
                <div
                  class="MuiBox-root css-1jzjbfr"
                >
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root MuiSvgIcon-colorDisabled MuiSvgIcon-fontSizeMedium css-1db085k-MuiSvgIcon-root"
                    data-testid="ScheduleIcon"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M11.99 2C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2M12 20c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8"
                    />
                    <path
                      d="M12.5 7H11v6l5.25 3.15.75-1.23-4.5-2.67z"
                    />
                  </svg>
                  <div
                    class="MuiBox-root css-1hsc5oo"
                  >
                    <h6
                      class="MuiTypography-root MuiTypography-subtitle1 css-15qi99c-MuiTypography-root"
                    >
                      last 24 hours
                    </h6>
                  </div>
                </div>
              </span>
            </div>
          </div>
          <div
            class="MuiBox-root css-1pelcm7"
          >
            <hr
              class="MuiDivider-root MuiDivider-fullWidth MuiDivider-vertical css-ftc7wc-MuiDivider-root"
            />
          </div>
          <div
            class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-7 css-uqwprf-MuiGrid-root"
          >
            <div
              class="MuiBox-root css-10wfmn8"
            >
              <span
                class="MuiTypography-root MuiTypography-body1 makeStyles-featureLabel css-1ezega9-MuiTypography-root"
              >
                Groups
              </span>
              <div
                class="MuiBox-root css-1t04ftt"
              >
                <span
                  class="MuiTypography-root MuiTypography-body1 makeStyles-label makeStyles-label css-1ezega9-MuiTypography-root"
                >
                  1
                </span>
              </div>
              <div
                class="MuiBox-root css-164r41r"
              >
                <div
                  class="MuiBox-root css-1ckupud"
                >
                  <div
                    class="MuiBox-root css-126n10b"
                  >
                    <a
                      class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineHover makeStyles-groupLink css-1emptwe-MuiTypography-root-MuiLink-root"
                      href="/apps//groups/xxx-xxx-1"
                    >
                      First group
                    </a>
                  </div>
                  <div
                    class="MuiBox-root css-qiye2o"
                  >
                    <div
                      class="MuiBox-root css-k008qs"
                    >
                      <svg
                        aria-hidden="true"
                        class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
                        data-testid="LayersOutlinedIcon"
                        focusable="false"
                        viewBox="0 0 24 24"
                      >
                        <path
                          d="m11.99 18.54-7.37-5.73L3 14.07l9 7 9-7-1.63-1.27zM12 16l7.36-5.73L21 9l-9-7-9 7 1.63 1.27zm0-11.47L17.74 9 12 13.47 6.26 9z"
                        />
                      </svg>
                      <div
                        class="MuiBox-root css-7ieh0i"
                      >
                        -1
                      </div>
                      instances
                    </div>
                  </div>
                </div>
                <div
                  class="MuiListItem-root MuiListItem-gutters MuiListItem-padding css-1i06p90-MuiListItem-root"
                >
                  <div
                    class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-2 css-mhc70k-MuiGrid-root"
                  >
                    <div
                      class="MuiGrid-root MuiGrid-item css-13i4rnv-MuiGrid-root"
                    >
                      <div
                        class="MuiAvatar-root MuiAvatar-circular MuiAvatar-colorDefault makeStyles-colorAvatar makeStyles-colorAvatar css-kz5aim-MuiAvatar-root"
                      >
                        <svg
                          aria-hidden="true"
                          class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium MuiAvatar-fallback css-10mi8st-MuiSvgIcon-root-MuiAvatar-fallback"
                          data-testid="PersonIcon"
                          focusable="false"
                          viewBox="0 0 24 24"
                        >
                          <path
                            d="M12 12c2.21 0 4-1.79 4-4s-1.79-4-4-4-4 1.79-4 4 1.79 4 4 4zm0 2c-2.67 0-8 1.34-8 4v2h16v-2c0-2.66-5.33-4-8-4z"
                          />
                        </svg>
                      </div>
                    </div>
                    <div
                      class="MuiGrid-root MuiGrid-item css-13i4rnv-MuiGrid-root"
                    >
                      <div
                        class="MuiListItemText-root MuiListItemText-multiline makeStyles-root css-konndc-MuiListItemText-root"
                      >
                        <div
                          class="MuiBox-root css-70qvj9"
                        >
                          <div
                            class="MuiBox-root css-1xsd608"
                          >
                            main
                          </div>
                        </div>
                        <div
                          class="MuiBox-root css-15aqakd"
                        >
                          <div
                            class="MuiBox-root css-0"
                          >
                            1.11.3 (ALL)
                          </div>
                          <div
                            class="MuiBox-root css-n085mf"
                          >
                            <div
                              class="MuiBox-root css-k008qs"
                            >
                              <div
                                class="MuiBox-root css-0"
                              >
                                <svg
                                  aria-hidden="true"
                                  aria-label="Release date"
                                  class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall css-ptiqhd-MuiSvgIcon-root"
                                  data-mui-internal-clone-element="true"
                                  data-testid="ScheduleIcon"
                                  focusable="false"
                                  viewBox="0 0 24 24"
                                >
                                  <path
                                    d="M11.99 2C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2M12 20c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8"
                                  />
                                  <path
                                    d="M12.5 7H11v6l5.25 3.15.75-1.23-4.5-2.67z"
                                  />
                                </svg>
                              </div>
                              <div
                                class="MuiBox-root css-1iuj5ih"
                              >
                                07/18/2019
                              </div>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </li>
</div>
`;

exports[`Storyshots applications/ApplicationItem No Groups 1`] = `
<div
  id="root"
>
  <li
    class="MuiListItem-root MuiListItem-padding MuiListItem-divider makeStyles-divider makeStyles-root css-1oz7m58-MuiListItem-root"
    data-testid="list-item"
  >
    <div
      class="MuiGrid-root MuiGrid-container css-11lq3yg-MuiGrid-root"
    >
      <div
        class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 css-1idn90j-MuiGrid-root"
      >
        <div
          class="MuiGrid-root MuiGrid-container makeStyles-gridHeader css-1xzqqmo-MuiGrid-root"
        >
          <div
            class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-spacing-xs-1 css-j1w48a-MuiGrid-root"
          >
            <div
              class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 css-1idn90j-MuiGrid-root"
            >
              <h2
                class="MuiTypography-root MuiTypography-h2 css-150084s-MuiTypography-root"
              >
                <a
                  class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineHover makeStyles-mainLink css-1emptwe-MuiTypography-root-MuiLink-root"
                  href="/apps/123"
                >
                  ABC
                </a>
              </h2>
            </div>
            <div
              class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 css-1idn90j-MuiGrid-root"
            >
              <div
                class="MuiBox-root css-1yq8yj7"
              >
                <p
                  arial-label="group-id"
                  class="MuiTypography-root MuiTypography-body1 MuiTypography-noWrap makeStyles-idLabel css-14wn2h6-MuiTypography-root"
                >
                  xxx-xxx-yyy
                </p>
              </div>
              <div
                class="MuiBox-root css-1yuhvjn"
              >
                <span
                  class="MuiTypography-root MuiTypography-body1 makeStyles-descriptionLabel css-1ezega9-MuiTypography-root"
                >
                  App Item Description
                </span>
              </div>
            </div>
          </div>
          <div
            class="MuiGrid-root MuiGrid-item css-13i4rnv-MuiGrid-root"
          >
            <div>
              <button
                aria-controls="simple-menu-2"
                aria-haspopup="true"
                aria-label="Open menu"
                class="MuiButtonBase-root MuiIconButton-root MuiIconButton-edgeEnd MuiIconButton-sizeLarge css-1pux6rn-MuiButtonBase-root-MuiIconButton-root"
                data-testid="more-menu-open-button"
                tabindex="0"
                type="button"
              >
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
                  data-testid="MoreVertIcon"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M12 8c1.1 0 2-.9 2-2s-.9-2-2-2-2 .9-2 2 .9 2 2 2m0 2c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2m0 6c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2"
                  />
                </svg>
                <span
                  class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
                />
              </button>
            </div>
          </div>
        </div>
        <hr
          class="MuiDivider-root MuiDivider-fullWidth MuiDivider-light makeStyles-innerDivider css-xetjfm-MuiDivider-root"
        />
      </div>
      <div
        class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 css-1idn90j-MuiGrid-root"
      >
        <div
          class="MuiGrid-root MuiGrid-container makeStyles-itemSection css-11lq3yg-MuiGrid-root"
        >
          <div
            class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-4 css-gj1fbr-MuiGrid-root"
          >
            <div
              class="MuiBox-root css-1yuhvjn"
            >
              <span
                class="MuiTypography-root MuiTypography-body1 makeStyles-featureLabel css-1ezega9-MuiTypography-root"
              >
                INSTANCES
              </span>
              <span
                class="MuiTypography-root MuiTypography-body1 makeStyles-label makeStyles-label css-1ezega9-MuiTypography-root"
              >
                <h5
                  class="MuiTypography-root MuiTypography-h5 css-xqgeko-MuiTypography-root"
                >
                  1
                </h5>
                <div
                  class="MuiBox-root css-1jzjbfr"
                >
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root MuiSvgIcon-colorDisabled MuiSvgIcon-fontSizeMedium css-1db085k-MuiSvgIcon-root"
                    data-testid="ScheduleIcon"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M11.99 2C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2M12 20c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8"
                    />
                    <path
                      d="M12.5 7H11v6l5.25 3.15.75-1.23-4.5-2.67z"
                    />
                  </svg>
                  <div
                    class="MuiBox-root css-1hsc5oo"
                  >
                    <h6
                      class="MuiTypography-root MuiTypography-subtitle1 css-15qi99c-MuiTypography-root"
                    >
                      last 24 hours
                    </h6>
                  </div>
                </div>
              </span>
            </div>
          </div>
          <div
            class="MuiBox-root css-1pelcm7"
          >
            <hr
              class="MuiDivider-root MuiDivider-fullWidth MuiDivider-vertical css-ftc7wc-MuiDivider-root"
            />
          </div>
          <div
            class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-7 css-uqwprf-MuiGrid-root"
          >
            <div
              class="MuiBox-root css-10wfmn8"
            >
              <span
                class="MuiTypography-root MuiTypography-body1 makeStyles-featureLabel css-1ezega9-MuiTypography-root"
              >
                Groups
              </span>
              <div
                class="MuiBox-root css-1t04ftt"
              >
                <span
                  class="MuiTypography-root MuiTypography-body1 makeStyles-label makeStyles-label css-1ezega9-MuiTypography-root"
                >
                  None
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </li>
</div>
`;
